<resources>
    <string name="app_name">Cluttr</string>
    <string name="changelog">Changelog</string>
    <string name="settings">Settings</string>
    <string name="devices">Devices</string>
    <string name="about">About</string>

    <string name="version">Version</string>
    <string name="bug">Report Bug</string>
    <string name="rate">Rate</string>
    <string name="author">Author</string>
    <string name="garret">Garret Yoder</string>
    <string name="website">Website</string>
    <string name="donate">Donate</string>
    <string name="github">Github</string>
    <string name="licenses">Licenses</string>
    <string name="gpl">GPL Notice</string>

</resources>